--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -136,7 +136,7 @@ $conf['mem_used_color'] = "5555cc";
 $conf['mem_shared_color'] = "0000aa";
 $conf['mem_cached_color'] = "33cc33";
 $conf['mem_buffered_color'] = "99ff33";
-$conf['mem_free_color'] = "00ff00";
+$conf['mem_free_color'] = "f0ffc0";
 $conf['mem_swapped_color'] = "9900CC";
 
 #
