--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -9,7 +9,7 @@
 #
 # Gmetad-webfrontend version. Used to check for updates.
 #
-$conf['gweb_root'] = dirname(__FILE__);
+$conf['gweb_root'] = "@vargwebroot@";
 $conf['gweb_confdir'] = "@vargwebdir@";
 
 include_once $conf['gweb_root'] . "/version.php";
