--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -439,17 +439,21 @@ $conf['display_views_using_tree'] = false;
 # those code paths to save time during XML parsing.
 $conf['strip_extra'] = true;
 
-# Enable Cubism integration http://square.github.io/cubism/
-$conf['cubism_enabled'] = true;
-# By default we'll just download Cubism and D3 required libraries from a CDN that offers
+# By default we'll just download Jquery, Cubism and D3 required libraries from a CDN that offers
 # that for free. If that is undesirable you can override this in conf.php by putting 
 # downloading the asset and putting relative path or absolute paths to it e.g.
 #$conf['cubism_js_path'] = "js/cubism.v1.min.js";
+$conf['jquery171_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js";
+$conf['jquery_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js";
+$conf['jqueryui_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js";
+$conf['rickshaw_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.5.1/rickshaw.min.js";
 $conf['cubism_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/cubism/1.6.0/cubism.v1.min.js";
-$conf['cubism_d3_path'] = "https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js";
+$conf['d3_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js";
+
+# Enable Cubism integration http://square.github.io/cubism/
+$conf['cubism_enabled'] = true;
 $conf['cubism_default_height'] = 30;
 $conf['cubism_default_step'] = 15;
-
 # Set this if you are fronted by a proxy and that ends up messing with Cubism URL detection
 #$conf['ganglia_url_prefix'] = "https://metric.domain.com";
 #$conf['ganglia_url_suffix'] = "/ganglia";
