--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -443,8 +443,8 @@ $conf['strip_extra'] = true;
 # that for free. If that is undesirable you can override this in conf.php by putting 
 # downloading the asset and putting relative path or absolute paths to it e.g.
 #$conf['cubism_js_path'] = "js/cubism.v1.min.js";
-$conf['jquery171_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7.1/jquery.min.js";
 $conf['jquery_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js";
+$conf['jquerymobile_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jquery-mobile/1.4.5/jquery.mobile.min.js";
 $conf['jqueryui_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js";
 $conf['rickshaw_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.5.1/rickshaw.min.js";
 $conf['cubism_js_path'] = "https://cdnjs.cloudflare.com/ajax/libs/cubism/1.6.0/cubism.v1.min.js";
