--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: php
 sudo: false
 php:
- - 5.5.29
- - 5.6.13
+ - '5.5'
+ - '5.6'
+ - '7.0'
+ - nightly
 before_script:
- - pyrus install http://phptal.org/latest.tar.gz
- - pear install pear/PHP_CodeSniffer
+ - pyrus install pear/PHP_CodeSniffer
  - phpenv rehash
 script:
  - phpcs --standard=test/phpcs-ganglia-web.xml -p *.php api graph.d lib nagios test || echo "Completed - Returned $?"
