--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ php:
  - '7.0'
  - nightly
 before_script:
- - pyrus install pear/PHP_CodeSniffer
  - phpenv rehash
+install:
+ - composer self-update
+ - composer require squizlabs/php_codesniffer
+ - composer install
 script:
  - make sniff || echo "Completed - Returned $?"
  - make test
