--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: php
 sudo: false
-php:
- - '5.3'
- - '5.4'
- - '5.5'
- - '5.6'
- - '7.0'
- - nightly
+matrix:
+  include:
+  - php: '5.3'
+    dist: precise
+  - php: '5.4'
+  - php: '5.5'
+  - php: '5.6'
+  - php: '7.0'
+  - php: '7.1'
+  - php: '7.2'
+  - php: nightly
 before_script:
  - phpenv rehash
  - export PATH=$PATH:`composer config bin-dir --absolute`
