If mem_slab is available, improve the mem_report
Previously the Slab memory (for Linux only) was included
in "use/share" (blue) rather than "cache/buffer" (green).

https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=565518

--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -137,6 +137,7 @@ $conf['cpu_gnice_color'] = "fff261";
 $conf['mem_used_color'] = "5555cc";
 $conf['mem_shared_color'] = "0000aa";
 $conf['mem_cached_color'] = "33cc33";
+$conf['mem_slab_color'] = "66e533";
 $conf['mem_buffered_color'] = "99ff33";
 $conf['mem_free_color'] = "f0ffc0";
 $conf['mem_swapped_color'] = "9900CC";
