--- a/conf_default.php.in
+++ b/conf_default.php.in
@@ -135,6 +135,7 @@ $conf['cpu_gnice_color'] = "fff261";
 # Colors for the MEMORY report graph
 #
 $conf['mem_used_color'] = "5555cc";
+$conf['mem_available_color'] = "2030F4";
 $conf['mem_shared_color'] = "0000aa";
 $conf['mem_cached_color'] = "33cc33";
 $conf['mem_slab_color'] = "66e533";
